[project]
name = "new-mechanism"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "andrewpoile", email = "andrewpoile@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
]

[project.scripts]
new-mechanism = "new_mechanism:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
